change tv name to series

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark " style="background-color: #09c;">
     <a class="navbar-brand" routerLink="movies">Movies</a>
-    <a class="navbar-brand" routerLink="tv">Tv</a>
+    <a class="navbar-brand" routerLink="series">Series</a>
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation"></button>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
