--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -1,7 +1,7 @@
 <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#09c" type = "pacman" [fullScreen] = "true"></ngx-spinner>
 
     <div class="container text-white py-5">
-    <h1 class="text-center mb-3">Tv List</h1>
+    <h1 class="text-center mb-3">Series List</h1>
 
     <div class="row">
         <div *ngFor="let movie of TrendingTv"  class="col-md-6 mb-4">
