--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -66,3 +66,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endCo
     
     
 }
+a{
+    text-decoration: none;
+    color: inherit;
+}
