--- a/src/app/moviesdetails/moviesdetails.component.scss
+++ b/src/app/moviesdetails/moviesdetails.component.scss
@@ -1,5 +1,7 @@
-.img-fluid{
-    height: 350px;
-    object-fit: contain;
-    object-position: left;
+.back{
+    text-align: center;
+}
+h1{
+    color: #09c !important;
+    font-weight: bold;
 }
