--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
            
             
             <li class="nav-item">
-                <button (click)="logout()" class="btn btn-danger">logout</button>
+                <button  (click)="logout() " class="btn btn-danger">Logout</button>
             </li>
 
             
