--- a/src/app/moviesdetails/moviesdetails.component.scss
+++ b/src/app/moviesdetails/moviesdetails.component.scss
@@ -1,7 +1,36 @@
+@mixin boxShadow($x,$y,$b,$c) {
+    -webkit-box-shadow:$x $y $b $c;
+    -moz-box-shadow:$x $y $b $c;
+    -o-box-shadow:$x $y $b $c;
+    -ms-box-shadow:$x $y $b $c;
+    box-shadow:$x $y $b $c;
+}
+.cardbox{
+   @include boxShadow(0, 0, 10px,#09c );
+    width: 15rem;
+    overflow: hidden;
+    height: 280px;
+    width: 153px !important;
+    margin: 18px;
+}
 .back{
     text-align: center;
 }
 h1{
     color: #09c !important;
     font-weight: bold;
+}
+.moviesdetails{
+    margin-bottom: 20px;
+}
+a{
+    text-decoration: none;
+    color: inherit;
+}
+.margintop{
+    margin-top: 20px;
+}
+.hightvalue{
+    height: 200px;
+    object-fit: cover;
 }
