--- a/src/app/seriesdetails/seriesdetails.component.html
+++ b/src/app/seriesdetails/seriesdetails.component.html
@@ -12,9 +12,9 @@
                 <h4>Release Date : {{seriesDetails.last_air_date}}</h4>
             </div>
             <div class=" row">
-                <div *ngFor="let series of top4" class=" cardbox  m-1 ">
+                <div *ngFor="let series of top4" class=" cardbox  ">
                     <a [routerLink]="['/seriesdetails', series.id]">
-                    <img [src]="imgBaseUrl+series.poster_path" class="card-img-top">
+                    <img [src]="imgBaseUrl+series.poster_path" class="card-img-top hightvalue">
                     <div class="card-body">
                       <h5 class="card-title back">{{series.name}}</h5>
                     </div>
