--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -11,7 +11,7 @@
                 <div class="row m-0">
                     <div class="col-md-6 m-0 p-0">
                         
-                            <img class="img-fluid" [src]="imgBaseUrl+movie.poster_path" />
+                            <img class="img-edit" [src]="imgBaseUrl+movie.poster_path" />
                         
                     </div>
                     <div class="col-md-6 relative">
