--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -9,7 +9,7 @@
                 <div class="movie">
                     <div class="row m-0">
                         <div class="col-md-6 m-0 p-0">
-                            <img class="img-fluid" [src]="imgBaseUrl+movie.poster_path" />
+                            <img class="img-edit" [src]="imgBaseUrl+movie.poster_path" />
                         </div>
                         <div class="col-md-6 relative">
                             <div class="avg">{{movie.vote_average}}</div>
