--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,8 @@
 <nav class="navbar navbar-expand-sm navbar-dark " style="background-color: #09c;">
     <a class="navbar-brand" routerLink="movies">Movies</a>
     <a class="navbar-brand" routerLink="series">Series</a>
-    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-        aria-expanded="false" aria-label="Toggle navigation"></button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
+    
+    <div class="ml-md-auto">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
            
             
@@ -12,10 +11,9 @@
             </li>
             <li class="nav-item">
                 <button routerLink="/signin" *ngIf = "!loggedin() then  "   class="btn btn-danger marginRight">Login</button>
-            </li>
-            <li class="nav-item">
                 <button routerLink="/signup" *ngIf = "!loggedin() "   class="btn btn-danger">Register</button>
             </li>
+            
 
             
            
